test/fail/asyncret3.mo
shared func call4(f : shared () -> async Int) : async Int = f();
